[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/hud/font.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/hud/HUD.gd" type="Script" id=2]

[sub_resource type="InputEventAction" id=1]
action = "ui_select"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -39.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 1 )
text = "DODGE THE 
CREEPS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -200.0
margin_right = 100.0
margin_bottom = -100.0
custom_fonts/font = ExtResource( 1 )
shortcut = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartButtonTimer" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="timeout" from="StartButtonTimer" to="." method="_on_StartButtonTimer_timeout"]
